--- a/index.html
+++ b/index.html
@@ -18,80 +18,104 @@
 
   <body>
     <h1>こんぷりえ～る</h1>
-    <p>ウェブポンで目当てを引ける確率を計算するサイトです。</p>
-    <p>提供率は他のウェブポンからの憶測です。（<a href="https://twitter.com/p4jyn/status/1421526351870193666?s=20&t=_9iYQ0gd-ZvWy1kqGrLAqw">参考</a>）</p>
-    <p>
-      例えばE賞のどれかが当たる確率が55%, 特定の1種類が当たる確率は5.5%です。
+    <p class="text-start">
+      ウェブポンで目当てを引ける確率を計算します。<br />
+      提供割合は過去のウェブポンからの推測です。（<a
+        href="https://twitter.com/p4jyn/status/1421526351870193666?s=20&t=_9iYQ0gd-ZvWy1kqGrLAqw"
+        >参考</a
+      >） <br />
+      精度を高めるため、#らぷりウェブポン へのガチャ結果報告にご協力ください。
     </p>
 
-    <table class="table table-striped">
+    <table class="table table-striped table-sm">
       <thead>
         <tr>
-          <th>賞</th>
-          <th>種類</th>
-          <th>提供率</th>
-          <th>コンプ率</th>
-          <th>少なくとも1個出る確率</th>
+          <th class="col-md-1">賞</th>
+          <th class="col-md-1">種類</th>
+          <th class="col-md-2">
+            提供割合
+            <span id="size"></span>
+          </th>
+          <th class="col-md-2">コンプ率</th>
+          <th class="col-md-2">1個以上出る確率</th>
+        </tr>
+        <tr class="col-sm2">
+          <th></th>
+          <th></th>
+          <th>
+            <select name="prob_select" id="prob_select" class="form-select form-select-sm" style="width:40%">
+              <option value="normal">標準予測</option>
+              <option value="positive">楽観的予測</option>
+              <option value="negative">悲観的予測</option>
+              <option value="manual">手動入力</option>
+              <option value="static">実測値</option>
+            </select>
+          </th>
+          <th></th>
+          <th></th>
         </tr>
       </thead>
       <tbody>
         <tr id="ssr">
           <td>激レア賞</td>
-          <td>1</td>
-          <td>0.2%</td>
+          <td></td>
+          <td><span class=rate></span>%</td>
           <td></td>
           <td></td>
         </tr>
         <tr id="sr">
           <td>レア賞</td>
-          <td>1</td>
-          <td>0.6%</td>
+          <td></td>
+          <td><span class=rate></span>%</td>
           <td></td>
           <td></td>
         </tr>
         <tr id="a">
           <td>A賞</td>
-          <td>2</td>
-          <td>1.2%</td>
+          <td></td>
+          <td><span class=rate></span>%</td>
           <td></td>
           <td></td>
         </tr>
         <tr id="b">
           <td>B賞</td>
-          <td>3</td>
-          <td>8%</td>
+          <td></td>
+          <td><span class=rate></span>%</td>
           <td></td>
           <td></td>
         </tr>
         <tr id="c">
           <td>C賞</td>
-          <td>5</td>
-          <td>15%</td>
+          <td></td>
+          <td><span class=rate></span>%</td>
           <td></td>
           <td></td>
         </tr>
         <tr id="d">
           <td>D賞</td>
-          <td>8</td>
-          <td>20%</td>
+          <td></td>
+          <td><span class=rate></span>%</td>
           <td></td>
           <td></td>
         </tr>
         <tr id="e">
           <td>E賞</td>
-          <td>10</td>
-          <td>55%</td>
+          <td></td>
+          <td><span class=rate></span>%</td>
           <td></td>
           <td></td>
         </tr>
       </tbody>
     </table>
 
-    <p>ガチャを回す回数を下のフォームに半角で入力してください（1000を超えると正常に計算されません）</p>
-
+    <p class="text-start">
+      例えばE賞のどれかが当たる確率が55%, 特定の1種類が当たる確率は5.5%です。<br />
+      ガチャを回す回数を下のフォームに半角で入力してください（1000を超えると正常に計算されません）
+    </p>
     <form class="mb-3">
       <input type="text" id="num" name="回数" class="form-text" />
       <input id="exec" type="button" value="計算" class="btn btn-primary" />
     </form>
+    <span id="warning" class="text-danger"></span>
   </body>
 </html>
