--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
     <p class="text-start">
       ウェブポンで目当てを引ける確率を計算します。<br />
       提供割合は過去のウェブポンからの推測です。（<a
-        href="https://twitter.com/p4jyn/status/1421526351870193666?s=20&t=_9iYQ0gd-ZvWy1kqGrLAqw"
-        >参考</a
+        href="https://twitter.com/p4jyn/status/1491422087290179584?s=20&t=qc5__AeGetsitERj6OUHFg"
+        >参照</a
       >） <br />
-      精度を高めるため、#らぷりウェブポン へのガチャ結果報告にご協力ください。
+      精度を高めるため、#らぷりウェブポン へのガチャ結果報告にご協力いただけると嬉しいです。
     </p>
 
     <table class="table table-striped table-sm">
@@ -63,49 +63,49 @@
         <tr id="ssr">
           <td>激レア賞</td>
           <td></td>
-          <td><span class="rate"></span><span>%</span></td>
+          <td><span class="rate"></span><span class="percent"></span></td>
           <td></td>
           <td></td>
         </tr>
         <tr id="sr">
           <td>レア賞</td>
           <td></td>
-          <td><span class="rate"></span><span>%</span></td>
+          <td><span class="rate"></span><span class="percent"></span></td>
           <td></td>
           <td></td>
         </tr>
         <tr id="a">
           <td>A賞</td>
           <td></td>
-          <td><span class="rate"></span><span>%</span></td>
+          <td><span class="rate"></span><span class="percent"></span></td>
           <td></td>
           <td></td>
         </tr>
         <tr id="b">
           <td>B賞</td>
           <td></td>
-          <td><span class="rate"></span><span>%</span></td>
+          <td><span class="rate"></span><span class="percent"></span></td>
           <td></td>
           <td></td>
         </tr>
         <tr id="c">
           <td>C賞</td>
           <td></td>
-          <td><span class="rate"></span><span>%</span></td>
+          <td><span class="rate"></span><span class="percent"></span></td>
           <td></td>
           <td></td>
         </tr>
         <tr id="d">
           <td>D賞</td>
           <td></td>
-          <td><span class="rate"></span><span>%</span></td>
+          <td><span class="rate"></span><span class="percent"></span></td>
           <td></td>
           <td></td>
         </tr>
         <tr id="e">
           <td>E賞</td>
           <td></td>
-          <td><span class="rate"></span><span>%</span></td>
+          <td><span class="rate"></span><span class="percent"></span></td>
           <td></td>
           <td></td>
         </tr>
@@ -121,7 +121,7 @@
     
 
     <p class="text-start">
-      例えばE賞のどれかが当たる確率が55%, 特定の1種類が当たる確率は5.5%です。<br />
+      例えばE賞のどれかが当たる確率が55%の時、特定の1種類が当たる確率は5.5%です。<br />
       ガチャを回す回数を下のフォームに半角で入力してください（1000を超えると正常に計算されません）
     </p>
     <form class="mb-3">
