--- a/index.html
+++ b/index.html
@@ -20,11 +20,7 @@
     <h1>こんぷりえ～る</h1>
     <p class="text-start">
       ウェブポンで目当てを引ける確率を計算します。<br />
-      提供割合は過去のウェブポンからの推測です。（<a
-        href="https://twitter.com/p4jyn/status/1491422087290179584?s=20&t=qc5__AeGetsitERj6OUHFg"
-        >参照</a
-      >） <br />
-      精度を高めるため、#らぷりウェブポン へのガチャ結果報告にご協力いただけると嬉しいです。
+      提供割合は過去のウェブポンからの推測です。
     </p>
 
     <table class="table table-striped table-sm">
@@ -32,9 +28,7 @@
         <tr>
           <th class="col-md-1">賞</th>
           <th class="col-md-1">種類</th>
-          <th class="col-md-1">
-            提供割合
-          </th>
+          <th class="col-md-1">提供割合</th>
           <th class="col-md-2">コンプ率</th>
           <th class="col-md-2">1個以上出る率</th>
         </tr>
@@ -48,6 +42,7 @@
               class="form-select form-select-sm"
               style="width: 40%"
             >
+              <option value="asamiyui">浅見ゆい</option>
               <option value="normal">標準</option>
               <option value="positive">楽観的</option>
               <option value="negative">悲観的</option>
@@ -118,7 +113,6 @@
         </tr>
       </tbody>
     </table>
-    
 
     <p class="text-start">
       例えばE賞のどれかが当たる確率が55%の時、特定の1種類が当たる確率は5.5%です。<br />
