実測の更新、古いモードのコメントアウト

--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
               style="width: 40%"
             >
               <option value="asamiyui">浅見ゆい</option>
-              <option value="normal">標準</option>
+              <!--<option value="normal">標準</option>
               <option value="positive">楽観的</option>
-              <option value="negative">悲観的</option>
+              <option value="negative">悲観的</option>-->
               <option value="manual">手動</option>
               <option value="static">実測</option>
             </select>
