藍月なくるinくじメイトに対応

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     <h1>こんぷりえ～る</h1>
     <p class="text-start">
       ウェブポンで目当てを引ける確率を計算します。<br />
-      提供割合は過去のウェブポンからの推測です。
+      提供割合は過去のウェブポンからの推測です。<br />
+      （一時的に藍月なくる in くじメイトを追加）
     </p>
 
     <table class="table table-striped table-sm">
@@ -42,6 +43,7 @@
               class="form-select form-select-sm"
               style="width: 40%"
             >
+            <option value="nakuru">藍月なくる</option>
               <option value="asamiyui">浅見ゆい</option>
               <!--<option value="normal">標準</option>
               <option value="positive">楽観的</option>
